Small corrections in documentation

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -49,7 +49,7 @@
 \chapter{FM-indeks}
 \input{./FMindeks.tex}
 
-\chapter{Testiranja}
+\chapter{Testiranje}
 \input{./testiranja.tex}
 
 \chapter{Zaključak}
