--- a/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
+++ b/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
@@ -11,11 +11,11 @@ Algoritam transformacije provodi se u 4 koraka:
   \item Na kraj teksta postavlja se znak \$ (ili neki drugi znak koji se ne pojavljuje u ulaznom nizu i leksikografski je manji od svih ostalih znakova u nizu) koji označava kraj te je, leksikografski gledano, najmanji znak ulazne abecede.
   \item Stvara se matrica svih različitih cikličkih pomaka niza dobivenog nakon 1. koraka.
   \item Matrica iz koraka 2 se sortira u leksikografskom poretku.
-  \item Dobivena transformacija iščitava se iz posijednjeg stupca matrice dobivene u koraku 3.
+  \item Dobivena transformacija iščitava se iz posljednjeg stupca matrice dobivene u koraku 3.
 
 \end{enumerate}
 
-Tijek algoritma za riječ "banana" prikazan je na slici \ref{bwt1}. Vidi se kako je BWT transformacija te riječi jednaka annb\$aa. 
+Tijek algoritma za riječ \emph{banana} prikazan je na slici \ref{bwt1}. Vidi se kako je BWT transformacija te riječi jednaka \emph{annb\$aa}. 
 
 
 \begin{figure}[H]
@@ -37,7 +37,7 @@ Matrica dobivena u 3. koraku algoritma poslužiti će za rekonstrukciju original
 Iako je sam algoritam izgradnje BWT transformacije veoma jednostavan, nažalost nije i efikasan. Za poveće tekstove je jednostavno nemoguće napraviti sve njihove rotacije i onda ih sortirati, jer bi memorijsko zauzeće bilo preveliko. Iz tog razloga potrebno je koristiti algoritme koji BWT transformaciju mogu obaviti memorijski i vremenski efikasno. U nastavku ćemo pogledati dva takva algoritma te vidjeti koje su njihove prednosti i nedostatci.
 
 \subsection{Multikey quicksort}
-Prvo ćemo proučiti jedan tip algoritma za sortiranje koji se temelji na quick sort algoritmu predloženom u \cite{mkqs}. Prednost ovog algoritma jest u tome da može sortirati sve rotacije jednog niza koristeći samo osnovni niz i dodatno polje pokazivača na taj niz. Na taj način nije potrebno raditi sve rotacije ulaznog niza. Algoritam u svojoj osnovi spaja quick sort i radix sort. Osnovni koraci algoritma prikazani su na slici \ref{fig:mkqs}  Prvo se nasumično odabere jedan niz, a prvi element toga niza je pivot. Odabrani niz se nakon toga zamijeni s prvim nizom. Sada djelomično sortiramo sve nizove tako da se nizovi koji počinju s elementom koji je jednak pivotu pozicioniraju na početak ili kraj niza, dok se ostali nizovi poredaju tako da tako da se u prvom dijelu nalaze svi nizovi koji započinju elementom koji je manji od pivota (u primjeru na slici je to niz koji započinje s "\$"), dok se u drugom dijelu nalaze nizovi koji započinju s elementom koji je veći od pivota (u primjeru su to nizovi koji započinju s "b" i "n"). Idući korak jest da se svi nizovi koji započinju elementom koji je iznosom jednak pivotu premjeste u sredinu i to tako da se nizovi koji započinju s manjim elementom nalaze ispred njih, a nizovi koji započinju s većim elementom iza njih.  Sada su nizovi efektivno podijeljeni u tri dijela, prvi dio koji sadrži nizove koji započinje elementom koji je manji od pivota, drugi dio koji čine nizovi koji počinje elementima koji su jednaki pivotu i treći dio koji sačinjavaju nizovi  koji započinju elementom koji je veći od pivota. Sada kada imamo ovu podjelu, svaki od ta tri dijela je potpuno neovisan o drugima i svi se mogu nezavisno sortirati (ovdje je očita i jedna prednost ovog postupka koju ćemo kasnije naglasiti). Sada prvu i treću grupu nizova sortiramo na isti način kao što smo sortirali sve nizove. Drugu grupu ćemo sortirati na isti način, jedina će razlika biti da ćemo sada sortirati po drugom znaku tih nizova (jer je očito da su sortirani po prvom znaku), no ostatak algoritma je u potpunosti jednak. Algoritam se nastavlja dok svi nizovi nisu u potpunosti međusobno sortirani.
+Prvo ćemo proučiti jedan tip algoritma za sortiranje koji se temelji na quick sort algoritmu predloženom u \cite{mkqs}. Prednost ovog algoritma jest u tome da može sortirati sve rotacije jednog niza koristeći samo osnovni niz i dodatno polje pokazivača na taj niz. Na taj način nije potrebno raditi sve rotacije ulaznog niza. Algoritam u svojoj osnovi spaja quick sort i radix sort. Osnovni koraci algoritma prikazani su na slici \ref{fig:mkqs}. Prvo se nasumično odabere jedan niz, a prvi element toga niza je pivot. Odabrani niz se nakon toga zamijeni s prvim nizom. Sada djelomično sortiramo sve nizove tako da se nizovi koji počinju s elementom koji je jednak pivotu pozicioniraju na početak ili kraj niza, dok se ostali nizovi poredaju tako da tako da se u prvom dijelu nalaze svi nizovi koji započinju elementom koji je manji od pivota (u primjeru na slici je to niz koji započinje s \$), dok se u drugom dijelu nalaze nizovi koji započinju s elementom koji je veći od pivota (u primjeru su to nizovi koji započinju s $b$ i $n$). Idući korak jest da se svi nizovi koji započinju elementom koji je iznosom jednak pivotu premjeste u sredinu i to tako da se nizovi koji započinju s manjim elementom nalaze ispred njih, a nizovi koji započinju s većim elementom iza njih.  Sada su nizovi efektivno podijeljeni u tri dijela, prvi dio koji sadrži nizove koji započinje elementom koji je manji od pivota, drugi dio koji čine nizovi koji počinje elementima koji su jednaki pivotu i treći dio koji sačinjavaju nizovi  koji započinju elementom koji je veći od pivota. Sada kada imamo ovu podjelu, svaki od ta tri dijela je potpuno neovisan o drugima i svi se mogu nezavisno sortirati (ovdje je očita i jedna prednost ovog postupka koju ćemo kasnije naglasiti). Sada prvu i treću grupu nizova sortiramo na isti način kao što smo sortirali sve nizove. Drugu grupu ćemo sortirati na isti način, jedina će razlika biti da ćemo sada sortirati po drugom znaku tih nizova (jer je očito da su sortirani po prvom znaku), no ostatak algoritma je u potpunosti jednak. Algoritam se nastavlja dok svi nizovi nisu u potpunosti međusobno sortirani.
 
 
 \begin{figure}[h]
@@ -47,16 +47,16 @@ Prvo ćemo proučiti jedan tip algoritma za sortiranje koji se temelji na quick 
  \label{fig:mkqs}
 \end{figure}
 
-Bitno je za napomenuti da je zbog ilustracije rad algoritam prikazan na nezavisnim nizovima (kao da smo prvo napravili sve rotacije osnovnog niza i onda njih sortirali). Naravno u implementaciji to nije tako napravljeno, već postoji niz brojeva koji predstavljaju pokazivače (odnosno indekse pošto pokazivači ne postoje u programskom jeziku Java) na elemente ulaznog polja. Onda umjesto da se zamjenjuju čitavi nizovi jednostavno se zamijene pokazivači u tom polju.
+Bitno je za napomenuti da je zbog ilustracije rad algoritma prikazan na nezavisnim nizovima (kao da smo prvo napravili sve rotacije osnovnog niza i onda njih sortirali). Naravno, u implementaciji to nije tako napravljeno, već postoji niz brojeva koji predstavljaju pokazivače (odnosno indekse pošto pokazivači ne postoje u programskom jeziku Java) na elemente ulaznog polja. Tako se umjesto zamjene čitavih nizova jednostavno zamijene pokazivači u tom polju.
 
-Prednost ovog postupka su prije svega njegova jednostavnost. Sam algoritam je veoma intuitivan i nije ga teško razumjeti. Druga, mnogo očitija prednost jest mogućnost paralelizacije ovog algoritma. Kako je ranije navedeno, nizovi su na kraju podijeljeni u tri nezavisne grupe, od kojih se svaka sortira nezavisno. To znači da bi teoretski svaku ovu grupu mogli sortirati međusobno paralelno. Nažalost zbog veoma loše implementacije paralelnih mehanizama u programskom jeziku Javi, ovo ipak nije napravljeno. No kada bi implementacija bila napravljena u nekom programskom jeziku koji je više specijaliziran za paralelizaciju to bi bilo dobro napraviti. Najveći nedostatci ovog postupka su svakako nešto veća složenost naspram konstrukcije BWT-a korištenjem sufiksnog polja, te također rekurzivna priroda algoritma koja zahtijeva puno rekurzivnih poziva i iz tog razloga također i alokaciju veće količine memorije za stog.
+Prednost ovog postupka je prije svega njegova jednostavnost. Sam algoritam je veoma intuitivan i nije ga teško razumjeti. Druga, mnogo očitija prednost jest mogućnost paralelizacije ovog algoritma. Kako je ranije navedeno, nizovi su na kraju podijeljeni u tri nezavisne grupe, od kojih se svaka sortira nezavisno. To znači da bi teoretski svaku ovu grupu mogli sortirati međusobno paralelno. Nažalost, zbog veoma loše implementacije paralelnih mehanizama u programskom jeziku Javi, ovo ipak nije napravljeno. No kada bi implementacija bila napravljena u nekom programskom jeziku koji je više specijaliziran za paralelizaciju, spomenutu paralelizaciju bi bilo dobro napraviti. Najveći nedostatci ovog postupka su svakako nešto veća složenost naspram konstrukcije BWT-a korištenjem sufiksnog polja, te također rekurzivna priroda algoritma koja zahtijeva puno rekurzivnih poziva i iz tog razloga također i alokaciju veće količine memorije za stog.
 
-Iako se ovdje radi o veoma zanimljivom algoritmu (algoritmu koji nije naravno primjenjiv samo na pronalazak BWT transformacije), on se nažalost pokazao presporim u usporedbi s izračunavanjem BWT transformacije korištenjem sufiksnog polja te se tog razloga dalje više neće razmatrati.
+Iako se ovdje radi o veoma zanimljivom algoritmu (algoritmu koji nije naravno primjenjiv samo na pronalazak BWT transformacije), on se nažalost pokazao presporim u usporedbi s izračunavanjem BWT transformacije korištenjem sufiksnog polja te se iz tog razloga dalje neće razmatrati.
 
 \subsection{Konstrukcija sufiksnog polja}
-Sufiksno polje jest jednostavna struktura podataka koje je sastavljena od niza cijelih brojeva koji sadrže početna mjesta abecedno poredanih sufiksa nekog niza. Dobra stvar kod sufiksnog polja jest da se iz njega može izračunati BWT transformacija u linearnom vremenu. Još veća prednost ovakvog postupka jest da se sufiksno polje isto tako može konstruirati u linearnom vremenu. Iako postoje mnogi algoritmi za konstrukciju sufiksnih polja, u ovoj implementaciji iskorišten je algoritam koji je predložen u \cite{sais1} i \cite{sais2}. 
+Sufiksno polje jest jednostavna struktura podataka koje je sastavljena od niza cijelih brojeva koji sadrže početna mjesta abecedno poredanih sufiksa nekog niza. Dobra stvar kod sufiksnog polja jest da se iz njega može izračunati BWT transformacija u linearnom vremenu. Još veća prednost ovakvog postupka jest da se sufiksno polje isto tako može konstruirati u linearnom vremenu. Iako postoje mnogi algoritmi za konstrukciju sufiksnih polja, u ovoj implementaciji iskorišten je algoritam predložen u \cite{sais1} i \cite{sais2}. 
 
-Prije nego što se krene na objašnavanje samog algoritma potrebno je uvesti određenu terminologiju koju ćemo koristiti za objašnjenje postupaka ovog algoritma. Ulazni niz znakova ćemo označiti sa $S$. Neka je ulazni niz znakova duljine $n$, i neka je oznaka indeksiranja jednog elementa $S[i]$ pri čemu je $i \in [0,n-1]$. Posljednja stvar koju je bitno napomenuti jest da znakovni niz mora obavezno završavati znakom koji je strogo manji od svih znakova u ostatku niza.  Definirat ćemo dvije različite vrste znakova, L-znakove i S-znakove. S-znak je onaj znak koji je manji od znaka koji dolazi neposredno iza njega (odnosno formalnije, ako gledamo i-ti znak onda mora vrijediti $S[i]<S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je S-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je S-znak). L-znak je onaj znak za koji vrijedi da je veći od znaka koji se nalazi desno od tog znaka (odnosno formalnije, ako gledamo i-ti znak onda mora vrijediti $S[i]>S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je L-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je L-znak). Iznimka od ovog pravila jest zadnji znak koji će uvijek biti definiran kao S-znak. Ovaj koncept možemo proširiti i na sufikse, pa reći da je S-sufiks sufiks koji počinje S-znakom i L-sufiks sufiks koji počinje L-znakom. Uvest ćemo još pojam LMS-znak i LMS-podniz. LMS-znak je S-znak kojemu se na lijevom mjestu nalazi L-znak, odnosno vrijedi $S[i]$ je S-znak i $S[i-1]$ je L-znak. LMS-podniz je niz koji započinje LMS-znakom i završava LMS-znakom, te se u njemu ne nalaze drugi LMS-znakovi. Primjer jednog ovako označenog niza može se vidjeti na slici \ref{fig:oznake}.
+Prije nego što se krene na objašnavanje samog algoritma potrebno je uvesti određenu terminologiju koju ćemo koristiti za objašnjenje postupaka ovog algoritma. Ulazni niz znakova ćemo označiti sa $S$. Neka je ulazni niz znakova duljine $n$, i neka je oznaka indeksiranja jednog elementa $S[i]$ pri čemu je $i \in [0,n-1]$. Posljednja stvar koju je bitno napomenuti jest da znakovni niz mora obavezno završavati znakom koji je strogo manji od svih znakova u ostatku niza.  Definirat ćemo dvije različite vrste znakova, L-znakove i S-znakove. S-znak je onaj znak koji je manji od znaka koji dolazi neposredno iza njega (odnosno formalnije, ako gledamo $i$-ti znak onda mora vrijediti $S[i]<S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je S-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je S-znak). L-znak je onaj znak za koji vrijedi da je veći od znaka koji se nalazi desno od tog znaka (odnosno formalnije, ako gledamo $i$-ti znak onda mora vrijediti $S[i]>S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je L-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je L-znak). Iznimka od ovog pravila jest zadnji znak koji će uvijek biti definiran kao S-znak. Ovaj koncept možemo proširiti i na sufikse, pa reći da je S-sufiks sufiks koji počinje S-znakom i L-sufiks sufiks koji počinje L-znakom. Uvest ćemo još pojam LMS-znak i LMS-podniz. LMS-znak je S-znak kojemu se na lijevom mjestu nalazi L-znak, odnosno vrijedi $S[i]$ je S-znak i $S[i-1]$ je L-znak. LMS-podniz je niz koji započinje LMS-znakom i završava LMS-znakom, te se u njemu ne nalaze drugi LMS-znakovi. Primjer jednog ovako označenog niza može se vidjeti na slici \ref{fig:oznake}.
 
 \\
 
@@ -67,11 +67,11 @@ Prije nego što se krene na objašnavanje samog algoritma potrebno je uvesti odr
  \label{fig:oznake}
 \end{figure}
 
-Sada kada su uvedene osnovne oznake, možemo pojasniti samu ideju algoritma. Osnovna ideja algoritma predložena je već u \cite{ka}. U svojoj osnovnoj inačici, algoritam se je zasnovao na svojstvu da ako znamo poredak svih S-sufiksa ona možemo odrediti i poredak svih L-sufiksa. Nažalost, problem je ostao u tome kako zapravo efikasno sortirati S-sufikse. U tom radu je predložen način kako bi se to moglo riješiti korištenjem S-udaljenosti, što je opet zahtijevalo dodatnog memorijskog prostora. Ta ideja je razrađena i poboljšana te je konačno predložen novi algoritam u \ref{fig:sais1} koji se zasniva na istoj ideji, ali uvodi neke promjene koje su rezultirale mnogo boljim ponašanjem ovog algoritma. Prvo bitno poboljšanje koje je uvedeno jest da se umjesto sortiranja S-sufiksa mogu sortirati LMS-sufiksi, koji su sasvim dovoljni kako bi se odredio poredak L-sufiksa, pomoću kojih se konačno može odrediti poredak S-sufiksa. Kako su LMS-sufiksi obično dulji, to znači kako ćemo vjerojatno imati manji broj takvih sufiksa koje moramo sortirati nego bi to bio slučaj da sortiramo sve S-sufikse (u najgorem slučaju broj LMS-podnizova je polovica duljine ulaznog niza). Drugo veoma zanimljivo poboljšanje jest da se za sortiranje tih LMS-podnizova ne mora koristiti nikakav posebni algoritam za sortiranje nego se može koristiti isti postupak kao i kod sortiranja L-znakova i S-znakova. U nastavku ćemo pogledati detaljnije korake ovog algoritma. 
+Sada kada su uvedene osnovne oznake, možemo pojasniti samu ideju algoritma. Osnovna ideja algoritma predložena je već u \cite{ka}. U svojoj osnovnoj inačici, algoritam se zasniva na svojstvu da ako znamo poredak svih S-sufiksa ona možemo odrediti i poredak svih L-sufiksa. Nažalost, problem je ostao u tome kako zapravo efikasno sortirati S-sufikse. U spomenutom radu je predložen način kako bi se problem mogao riješiti korištenjem S-udaljenosti, što je opet zahtijevalo dodatnog memorijskog prostora. Ta ideja je razrađena i poboljšana te je konačno predložen novi algoritam u \cite{sais1} koji se zasniva na istoj ideji, ali uvodi neke promjene koje su rezultirale mnogo boljim ponašanjem ovog algoritma. Prvo bitno poboljšanje koje je uvedeno jest da se umjesto sortiranja S-sufiksa mogu sortirati LMS-sufiksi, koji su sasvim dovoljni kako bi se odredio poredak L-sufiksa, pomoću kojih se konačno može odrediti poredak S-sufiksa. Kako su LMS-sufiksi obično dulji, to znači kako ćemo vjerojatno imati manji broj takvih sufiksa koje moramo sortirati nego bi to bio slučaj da sortiramo sve S-sufikse (u najgorem slučaju broj LMS-podnizova je polovica duljine ulaznog niza). Drugo veoma zanimljivo poboljšanje jest da se za sortiranje LMS-podnizova ne mora koristiti nikakav posebni algoritam za sortiranje nego se može koristiti isti postupak kao i kod sortiranja L-znakova i S-znakova. U nastavku ćemo pogledati detaljnije korake ovog algoritma. 
 
-Prvo je potrebno svim znakovima odrediti jesu li to S-znakovi, L-znakovi ili LMS-znakovi. Nakon tog koraka slijedi postupak induciranog sortiranja. Definirajmo prvo inducirano sortiranje. To je postupak kojim ćemo iz LMS-sufiksa inducirati poredak L-sufiksa i potom S-sufiksa. Ovo je zapravo centralni i najvažniji dio algoritma. Za rad ovog algoritma potrebno nam je nekoliko struktura: ulazni niz, sufiksno polje, niz s oznakama tipova znakova i pokazivači na pretince. Sve strukture su već ranije spomenute i poznate, osim pokazivača na pretince. Pretince ćemo zapravo definirati kao područja u sufiksnom polju u kojima se nalaze indeksi sufiksa koji počinju s  istim početnim znakom. Broj pretinaca će dakle biti jednak veličini abecede (originalne abecede proširene s dodatnim znakom koji je manji od svih ostalih). Kada imamo sve te strukture možemo provesti postupak induciranog sortiranja. Postupak induciranog sortiranja se provodi kroz tri koraka opisanih u nastavku.
+Prvo je potrebno za sve znakove odrediti jesu li S-znakovi, L-znakovi ili LMS-znakovi. Nakon tog koraka slijedi postupak induciranog sortiranja. Definirajmo prvo inducirano sortiranje. To je postupak kojim ćemo iz LMS-sufiksa inducirati poredak L-sufiksa i potom S-sufiksa. Ovo je zapravo centralni i najvažniji dio algoritma. Za rad ovog algoritma potrebno nam je nekoliko struktura: ulazni niz, sufiksno polje, niz s oznakama tipova znakova i pokazivači na pretince. Sve strukture su već ranije spomenute i poznate, osim pokazivača na pretince. Pretince ćemo zapravo definirati kao područja u sufiksnom polju u kojima se nalaze indeksi sufiksa koji počinju s  istim početnim znakom. Broj pretinaca će dakle biti jednak veličini abecede (originalne abecede proširene s dodatnim znakom koji je manji od svih ostalih). Kada imamo sve te strukture možemo provesti postupak induciranog sortiranja. Postupak induciranog sortiranja se provodi kroz tri koraka opisanih u nastavku.
 
-Prije početka prvog koraka pretpostavimo da svi pokazivači na pretince pokazuju na krajeve tih pretinaca, i neka su vrijednosti elemenata sufiksnog polja inicijalno postavljene na vrijednost 0. Prvi korak se sastoji od toga da prođemo kroz niz i da sve LMS-znakove stavimo u odgovarajući pretinac (smjer prolaska kroz niz je u potpunosti nebitan, može se prolaziti od početka ili od kraja niza). Kada stavimo LMS-znak u odgovarajući pretinac potrebno je pokazivač na taj pretinac smanjiti tako da pokazuje ne iduće prazno mjesto. Ovaj korak algoritma detaljno je prikazan na slici \ref{fig:sais1}.
+Prije početka prvog koraka pretpostavimo da svi pokazivači na pretince pokazuju na krajeve tih pretinaca, i neka su vrijednosti elemenata sufiksnog polja inicijalno postavljene na vrijednost 0. Prvi korak se sastoji od toga da prođemo kroz niz i da sve LMS-znakove stavimo u odgovarajući pretinac (smjer prolaska kroz niz je u potpunosti nebitan, može se prolaziti od početka ili od kraja niza). Kada stavimo LMS-znak u odgovarajući pretinac potrebno je pokazivač na taj pretinac smanjiti tako da pokazuje na iduće prazno mjesto. Ovaj korak algoritma detaljno je prikazan na slici \ref{fig:sais1}.
 
 
 Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih pretinaca. Drugi korak algoritma jest induciranje L-znakova. U ovom koraku prolazimo kroz sufiksno polje s lijeva na desno i za svaki element koji je veći od 0, dakle za elemente za koje vrijedi $SA[i]>0$, obavljamo postupak indukcije. Svaki taj  element zapravo predstavlja indeks nekog znaka u ulaznom nizu. Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan L-znak. Mnogo jednostavnije rečeno  ispitujemo da li je znak $S[SA[i]]$ L-znak, pri čemu je $i$ indeks elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak L-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i uvećamo pokazivač na taj pretinac. 
@@ -103,7 +103,7 @@ Prije početka treće i posljednje faze induciranog sortiranja moramo pokazivač
  \label{fig:sais3}
 \end{figure}
 
-S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja središnji dio ovog algoritma za izgradnju sufiksnog polja. Ovim postupkom smo zapravo djelomično sortirali sve LMS-sufikse. Problem nam predstavljaju LMS-sufiksi koji su jednaki, jer njih na ovaj način ne možemo sortirati. Kako bi sortirali LMS-sufikse koji su jednaki moramo još pogledati znakove, odnosno LMS-podnizove koji dolaze iza tih LMS-podnizova. Definirajmo prvo što znači da su dva LMS-podniza jednaka. Dva LMS-podniza su jednaka su jednake duljine, ako na istim pozicijama imaju jednake znakove i dodatno ako su znakovi na istim pozicijama u oba niza istog tipa (S-znak ili L-znak). Kako bi odredili njihov poredak moramo vidjeti koji LMS-podniz slijedi nakon tih LMS-podnizova. To veoma lako možemo napraviti na način da svakom sufiksu pridijelimo neku leksičku vrijednost, odnosno neki broj. LMS-sufiksi koji su manji dobit će manju leksičku vrijednost, oni koji su veći dobit će veću leksičku vrijednost, dok će jednaki LMS-podniz dobiti jednake leksičke vrijednosti. Podjela leksičkih vrijednosti pojedinim LMS-podnizovima je prikazana na slici \ref{fig:leks}. Na taj način smo originalni niz zamijenili kompaktnijim nizom gdje je svaki LMS-podniz predočen svojom leksičkom vrijednošću. Sada možemo ponoviti cijeli algoritam i na isti način kao i za originalni niz (jer i znakovi su zapravo predstavljeni brojevima, tako da to ništa ne mijenja na stvari) i tako nastavljamo dok ne uspijemo odrediti poredak svih LMS-podnizova. Kada je on određen, induciranim sortiranjem lako dobijemo poredak svih L-sufiksa i S-sufiksa te je time postupak računanja sufiksnog polja dovršen.
+S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja središnji dio ovog algoritma za izgradnju sufiksnog polja. Ovim postupkom smo zapravo djelomično sortirali sve LMS-sufikse. Problem predstavljaju LMS-sufiksi koji su jednaki, jer se njih na spomenuti način ne može sortirati. Kako bi sortirali LMS-sufikse koji su jednaki moramo još pogledati znakove, odnosno LMS-podnizove koji dolaze iza tih LMS-podnizova. Definirajmo prvo što znači da su dva LMS-podniza jednaka. Dva LMS-podniza su jednaka ako su jednake duljine, ako na istim pozicijama imaju jednake znakove i dodatno, ako su znakovi na istim pozicijama u oba niza istog tipa (S-znak ili L-znak). Kako bi odredili njihov poredak moramo vidjeti koji LMS-podniz slijedi nakon tih LMS-podnizova. To veoma lako možemo napraviti na način da svakom sufiksu pridijelimo neku leksičku vrijednost, odnosno neki broj. LMS-sufiksi koji su manji dobit će manju leksičku vrijednost, oni koji su veći dobit će veću leksičku vrijednost, dok će jednaki LMS-podniz dobiti jednake leksičke vrijednosti. Podjela leksičkih vrijednosti pojedinim LMS-podnizovima je prikazana na slici \ref{fig:leks}. Na taj način smo originalni niz zamijenili kompaktnijim nizom gdje je svaki LMS-podniz predočen svojom leksičkom vrijednošću. Sada možemo ponoviti cijeli algoritam i na isti način kao i za originalni niz (jer i znakovi su zapravo predstavljeni brojevima, tako da to ništa ne mijenja na stvari) i tako nastavljamo dok ne uspijemo odrediti poredak svih LMS-podnizova. Kada je on određen, induciranim sortiranjem lako dobijemo poredak svih L-sufiksa i S-sufiksa te je time postupak računanja sufiksnog polja dovršen.
 
 \begin{figure}[H]
    \centering
@@ -113,10 +113,10 @@ S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja sre
 \end{figure}
 
 
-Sada kada smo pogledali sve korake algoritma zasebno, rezimirajmo cjelokupni algoritam još jednom. U prvom koraku je potrebno odrediti tipove svih znakova (da li je pojedini znak L-znak ili S-znak), kao i koji su znakovi LMS-znakovi. Drugi korak algoritma je provođenje induciranog sortiranja nad ulaznim nizom. Time smo dobili međusobno sortirane LMS-podnizove, no bitno je za zapamtiti da su sortirani samo oni koji su međusobno u potpunosti različiti. Ukoliko je dva ili više LMS-podniza u potpunosti jednako (po jednakosti definiranoj ranije), onda ovim korakom nije jednoznačno određen poredak LMS-podnizova, odnosno, oni nisu u potpunosti sortirani. Kako bi odredili poredak LMS-nizova potrebno ih je dodatno sortirati, i to radimo tako da sve LMS-podnizove zamijenimo leksikografskim znakovima po principu da LMS-podnizovi koji se u sortiranom poretku pojavljuju ranije dobe manje leksikografske znakove, jednakim LMS-podnizovima pridijele se jednaki leksikografski znakovi i onim LMS-podnizovima koji se pojavljuju kasnije pridijele veće leksičke vrijednosti. Time smo stvorili novi, reducirani, problem koji možemo riješiti istim postupkom kao i originalni problem. Kada je riješen ovaj reducirani problem, jednoznačno nam je određen poredak LMS-podnizova, i sada ukoliko provedemo ponovno inducirano sortiranje, dobit ćemo sufiksno polje.
+Sada kada smo pogledali sve korake algoritma zasebno, rezimirajmo cjelokupni algoritam još jednom. U prvom koraku je potrebno odrediti tipove svih znakova (da li je pojedini znak L-znak ili S-znak), kao i koji su znakovi LMS-znakovi. Drugi korak algoritma je provođenje induciranog sortiranja nad ulaznim nizom. Time smo dobili međusobno sortirane LMS-podnizove, no bitno je za zapamtiti da su sortirani samo oni koji su međusobno u potpunosti različiti. Ukoliko je dva ili više LMS-podniza u potpunosti jednako (po jednakosti definiranoj ranije), onda ovim korakom nije jednoznačno određen poredak LMS-podnizova, odnosno, oni nisu u potpunosti sortirani. Kako bi odredili poredak LMS-nizova potrebno ih je dodatno sortirati, i to radimo tako da sve LMS-podnizove zamijenimo leksikografskim znakovima po principu da LMS-podnizovi koji se u sortiranom poretku pojavljuju ranije dobiju manje leksikografske znakove, jednakim LMS-podnizovima pridijele se jednaki leksikografski znakovi i onim LMS-podnizovima koji se pojavljuju kasnije pridijele veće leksičke vrijednosti. Time smo stvorili novi, reducirani problem koji možemo riješiti istim postupkom kao i originalni problem. Kada je riješen ovaj reducirani problem, jednoznačno nam je određen poredak LMS-podnizova, i sada ukoliko provedemo ponovno inducirano sortiranje, dobit ćemo sufiksno polje.
 
 
-Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji ono je obično nešto veće zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedan nedostatak algoritma može činiti potreba za rekurzivnim pozivim tijekom rješavanja problema, no to obično nije tako veliki problem koliko se čini jer je najčešće broj rekurzivnih poziva dosta malen, čak i za veće nizove.
+Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji je obično nešto veće zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedan nedostatak algoritma može činiti potreba za rekurzivnim pozivim tijekom rješavanja problema, no to obično nije tako veliki problem kao što se može činiti jer je najčešće broj rekurzivnih poziva dosta malen, čak i za veće nizove.
 
 
 \section{Wavelet stablo}
@@ -152,15 +152,14 @@ Slika \ref{query} prikazuje primjer pronalaska ranga unutar wavelet stabla. Toč
 
 
 \section{RRR struktura}
-RRR struktura je struktura koja za dani niz nula i jedinica proizvoljne duljine vraća broj postavljenih jedinica do određene pozicije. Općenito, za dobivanje broja jedinica u nizu nula i jedinica, potrebno je proći kroz cijeli niz i provjeravati svaki element niza. Takvo prebrojavanje niza odvija se u linearnoj vremenskoj složenosti $O(n)$ gdje je $n$ duljina niza. RRR strukturom se ukupan broj jedinica do određene pozicije u nizu može izračunati u konstantnom vremenu $O(1)$ \cite{rrr1}. Također, korištenjem RRR strukture se postiže i implicitna kompresija \cite{alexRRR}. 
+RRR struktura je struktura koja za dani niz nula i jedinica proizvoljne duljine vraća broj postavljenih jedinica do određene pozicije - \emph{rang} niza. Općenito, za dobivanje broja jedinica u nizu nula i jedinica, potrebno je proći kroz cijeli niz i provjeravati svaki element niza. Takvo prebrojavanje niza odvija se u linearnoj vremenskoj složenosti $O(n)$ gdje je $n$ duljina niza. RRR strukturom se ukupan broj jedinica do određene pozicije u nizu može izračunati u konstantnom vremenu $O(1)$ \cite{rrr1}. Također, korištenjem RRR strukture se postiže i implicitna kompresija \cite{alexRRR}. 
 
-Ideja RRR strukture je da se inicijalno nad nizom konstruiraju blokovi (engl. \textit{buckets}) i nadblokovi (engl. \textit{superbuckets}) u kojima se pohranjuju brojevi jedinica za određene intervale niza. Na taj način se izbjegava pregledavanje cijelog dijela niza u potrazi za brojem jedinica, već je potrebno pregledati samo mali dio niza i određene vrijednosti pohranjene u blokovima i nadbloku. 
+Ideja RRR strukture je da se inicijalno nad nizom konstruiraju blokovi (engl. \textit{buckets}) i nadblokovi (engl. \textit{superbuckets}) u kojima se pohranjuju brojevi jedinica za određene intervale niza. Na taj način se izbjegava pregledavanje cijelog dijela niza u potrazi za brojem jedinica, već je potrebno pregledati samo mali dio niza (maksimalno dio niza sadržan u jednom bloku) te iščitati određene vrijednosti pohranjene u blokovima i nadbloku. 
 
 RRR struktura implementirana u ovom projektu se djelomično razlikuje od originalne strukture opisane u \cite{rrr1}. U originalnoj RRR strukturi niz je podijeljen u blokove tako da je svaki blok predstavljen parom (SB,B) te su definirane dodatne tri tablice \cite{rrr2}. Implementacija u ovom projektu je nešto drugačije izvedena, ali je zadržala izračun broja jedinica u nizu u konstantnom vremenu te je opisana u nastavku teksta.
 
 \subsection{Konstruiranje RRR strukture}
-U ovoj implementaciji RRR strukture, niz duljine $n$ se dijelio u blokove veličine $l$ i nadblokove veličine $l^2$. U idućem potpoglavlju opisan je način računanja ranga, odnosno broja jedinica u nizu, te se može vidjeti da je za računanje ranga potrebno slijedno proći kroz najviše $l$ elemenata niza, a budući da je veličina bloka $l$ fiksne duljine, određivanje ranga se računa u konstantnom vremenu. Vrijednost veličine bloka je potrebno pažljivo odrediti jer o njoj ovise i vremenska složenost i memorijsko zauzeće. Već je spomenuto da se u postupku računanja ranga maksimalno mora slijedno proći kroz niz duljine $l$ znakova pa je iz tog razloga poželjno što više smanjiti tu vrijednost. S druge strane, ako su blokovi manje veličine, trebat će se pohranjivati veći broj blokova što uzrokuje veće memorijsko zauzeće. Detaljnija razrada problema kako najbolje odabrati vrijednost veličine bloka (što ovisi i o veličini brojeva koji će se pohranjivati u blokove i nadblokove) opisana je u \cite{fm3}. U ovom radu korištena je veličina bloka l koja se računala kao logaritam duljine niza, tj. $l=log_2 n$. Stvorena su polja BS i SBS veličina 
-$\lfloor n/l \rfloor$ i $\lfloor n/l^{2} \rfloor$ za pohranjivanje vrijednosti blokova i nadblokova. 
+U ovoj implementaciji RRR strukture, niz duljine $n$ se dijelio u blokove veličine $l$ i nadblokove veličine $l^2$. U idućem potpoglavlju opisan je način računanja ranga, odnosno broja jedinica u nizu, te se može vidjeti da je za računanje ranga potrebno slijedno proći kroz najviše $l$ elemenata niza, a budući da je veličina bloka $l$ fiksne duljine, određivanje ranga se računa u konstantnom vremenu. Vrijednost veličine bloka je potrebno pažljivo odrediti jer o njoj ovise i vremenska složenost i memorijsko zauzeće. Već je spomenuto da se u postupku računanja ranga maksimalno mora slijedno proći kroz niz duljine $l$ znakova pa je iz tog razloga poželjno što više smanjiti tu vrijednost. S druge strane, ako su blokovi manje veličine, trebat će se pohranjivati veći broj blokova što uzrokuje veće memorijsko zauzeće. Detaljnija razrada problema kako najbolje odabrati vrijednost veličine bloka (što ovisi i o veličini brojeva koji će se pohranjivati u blokove i nadblokove) opisana je u \cite{fm3}. U ovom radu korištena je veličina bloka $l$ koja se računala kao logaritam duljine niza, tj. $l=log_2 n$. Također, stvorena su polja BS i SBS veličina $\lfloor n/l \rfloor$ i $\lfloor n/l^{2} \rfloor$ za pohranjivanje vrijednosti blokova i nadblokova. 
 
 Za stvaranje RRR strukture potrebno je proći kroz cijeli niz znamenki. Brojač jedinica je inicijalno postavljen na nula i povećava se kada se prolaskom kroz niz naiđe na element koji ima vrijednost 1. Kada se prođe kroz $l$ elemenata niza, vrijednost brojača pohranjuje se u polje BS kao zbroj vrijednosti stvorenih blokova u još neispunjenom nadbloku. To znači da se blokovi u jednom nadbloku pune kumulativno. Kada se prođe $l^2$ elemenata niza, vrijednost novog nadbloka jednaka je zbroju vrijednosti prošlog nadbloka (ako postoji) i vrijednosti brojača, odnosno zadnjeg konstruiranog bloka. Nakon izračuna vrijednosti nadbloka brojač se postavlja ponovo na vrijednost nula. Primjer ispunjenih vrijednosti u poljima BS i SBS dan je slikom \ref{rrr1}.
 
@@ -170,10 +169,10 @@ Za stvaranje RRR strukture potrebno je proći kroz cijeli niz znamenki. Brojač 
 \caption{Ispunjene vrijednosti u poljima BS i SBS}\label{rrr1}
 \end{figure}
 
-Ukoliko se osvrnemo na primjer wavelet stabla prikazanim u prethodnom poglavlju (slika \ref{usporedba}), lako možemo izračunati da, ukoliko stablo izgrađujemo originalnim algoritmom, ukupna veličina izgrađenih polja BS i SBS jednaka je 17. Ako se stablo izgradi dijeljenjem abecede na osnovi broja pojavljivanja znakova unutar ulaznog niza, ukupna veličina izgrađenih BS i SBS polja iznosi 14. Već na ovako malom primjeru zamjećuje se poprilična razlika između dobivenih veličina polja BS i SBS.
+Ukoliko se osvrnemo na primjer wavelet stabla prikazanim u prethodnom poglavlju (slika \ref{usporedba}), lako možemo izračunati da je, ukoliko stablo izgrađujemo originalnim algoritmom, ukupna veličina izgrađenih polja BS i SBS jednaka 17. Ako se stablo izgradi dijeljenjem abecede na osnovi broja pojavljivanja znakova unutar ulaznog niza, ukupna veličina izgrađenih BS i SBS polja iznosi 14. Već na ovako malom primjeru zamjećuje se poprilična razlika između dobivenih veličina polja BS i SBS.
 
 
-\subsection{Izračunavanje broja jedinica u nizu}
+\subsection{Izračunavanje broja jedinica u nizu - rang niza}
 Broj jedinica u nizu se izračunava kao zbroj vrijednosti zadnjeg popunjenog nadbloka i bloka do zadane pozicije te broja jedinica u ostatku niza koji nije obuhvaćen blokom. Zbog načina punjenja blokova i nadblokova, kod računanja ukupnog broja pojavljivanja jedinica u nizu do određene pozicije potrebno je pripaziti na određene situacije. Ako se tražena pozicija nalazi na mjestu u nizu jednakom $k\cdot l^2$, onda je broj pojavljivanja jedinica u podnizu jednak samo vrijednosti nadbloka, a ako se pozicija nalazi na mjestu u nizu $k\cdot l$, to znači da je vrijednost broja jedinica u podnizu dan ili samo nadblokom (ranije naveden slučaj) ili zbrojem vrijednosti nadbloka i bloka, te nema dijela niza koji nije obuhvaćen blokom/nadblokom za koji treba dodatno provjeravati vrijednosti znamenki. U ostalim slučajevima se vrijednostima zadnjeg popunjenog nadbloka i bloka pridodaje broj jedinica u dijelu niza od zadnjeg popunjenog bloka do pozicije do koje se traži izračun broja pojavljivanja jedinica u podnizu, i to je jedini dio u računanju kada je potrebno slijedno prolaziti kroz elemente niza prebrajajući pojavljivanje jedinica.
 
 U nastavku je opisan postupak izračunavanja broja jedinica za primjer niza prikazanog slikom \ref{rrr2}. Neka se želi izračunati broj pojavljivanja jedinica do pozicije 17. elementa niza (uključujući). Zadnji popunjeni nadblok moguće je pronaći formulom $indNadblok = \linebreak \lfloor pozicija/l^2 \rfloor = \lfloor 17/9 \rfloor = 1$, a zadnji popunjeni blok formulom $indBlok = \lfloor pozicija/l \rfloor = \lfloor 17/3 \rfloor = 5$. Broj pojavljivanja jedinica u ostatku podniza računa se provjeravanjem broja jedinica u dijelu niza od pozicije $indBlok\cdot l+1$ do tražene pozicije (uključujući). U ovom primjeru potrebno je provjeriti pojavljivanje jedinica u još dva elementa niza, 16. i 17. elementu, čime se dobiva vrijednost dodatnih jedinica $dodatno$ = 2. Ukupan broj pojavljivanja jedinica u nizu do 17. elementa niza se izračunava kao ukupno  = $SBS(indNadblok) + BS(indBlok) + dodatno = 5 + 1 + 2 = 8$.
